08/13 F Fixed segfault with Bahamut 1.4.27 and no NICKIP          [ #00]
08/11 F Fixed if MySQL returns error 1226, we exit out.           [ #00]
08/07 F Fixed handling of uptime reporting from Sentinel services [ #00]
08/06 F Fixed EXCLUDE ADD not checking the nick lenghts.          [ #00]
08/05 F Fixed maxvalues setting on clean installs.                [#122]

Provided by Hal9000 <hal9000@denorastats.org>
07/25 A Admin passwords are now MD5-encrypted in SQL              [ #00]
07/18 U Updated GeoIP database file                               [ #00]
07/18 A Moved deprecated ircd protocol files out of the way       [ #00]
07/18 A Made the ./Config process more clear about MySQL support  [ #00]
06/24 F Empty SWHOIS message now clears value instead of error    [#397]
05/09 F Fixed version message defined twice in InspIRCd 1.1       [#380]
05/09 F Fixed GeoIP not working correctly on InspIRCd 1.1         [#377]
02/28 A Added swhois support to nefarious                         [ #00]
02/28 A Added P10 account support                                 [ #00]
02/27 F Fixed AutoMode forced to +o in nefarious                  [ #00]
01/11 F Fixed wrong handling of chan modes in p10 burst           [ #00]
01/11 A Improved P10 hidden host support                          [ #00]
01/11 F Improved nefarious nick parser                            [ #00]
01/11 F Send ip instead of host to GeoIP for improved performance [ #00]
01/10 F Fixed kicked users not being removed from count and ison  [#371]
01/08 F Fixed except support in P10 burst function                [ #00]
01/08 F Fixed channel bans not parsed correctly on P10 burst      [ #00]
01/08 F Fixed version replies not handled correctly in nefarious  [ #00]
01/06 U Updated GeoIP.dat                                         [ #00]
12/20 F Fixed Denora crashing on certain user quits/parts         [#363]
12/19 A Added vhost support to Nefarious                          [#346]