@@ -9,9 +9,13 @@ VERSION_MAJOR="1"
 VERSION_MINOR="3"
 VERSION_PATCH="0"
 VERSION_EXTRA="SVN"
-VERSION_BUILD="32"
+VERSION_BUILD="33"
 
 # $Log$
+#
+# BUILD : 1.3.0.33 (SVN)
+# BUGS  : 399,402
+# NOTES : Passwords are now hidden from log on ADMIN ADD/SETPASS.Fixed extreme letter counting on some actions. Fixed ./Config not working on some Ubuntu systems.
 #
 # BUILD : 1.3.0.32 (SVN)
 # BUGS  : N/A
