@@ -271,7 +271,10 @@ Provided by Nomad Dev. <dev@denorastats.org> - 2005
 08/06 F Fixed EXCLUDE ADD not checking the nick lenghts.          [ #00]
 08/05 F Fixed maxvalues setting on clean installs.                [#122]
 
-Provided by Hal9000 <hal9000@denorastats.org>
+Provided by Hal9000 <hal9000@denorastats.org> - 2007
+08/01 F Passwords are now hidden from log on ADMIN ADD/SETPASS    [#402]
+08/01 F Fixed extreme letter counting on some actions             [#399]
+08/01 F Fixed ./Config not working on some Ubuntu systems         [ #00]
 07/25 A Admin passwords are now MD5-encrypted in SQL              [ #00]
 07/18 U Updated GeoIP database file                               [ #00]
 07/18 A Moved deprecated ircd protocol files out of the way       [ #00]
@@ -291,6 +294,8 @@ Provided by Hal9000 <hal9000@denorastats.org>
 01/08 F Fixed channel bans not parsed correctly on P10 burst      [ #00]
 01/08 F Fixed version replies not handled correctly in nefarious  [ #00]
 01/06 U Updated GeoIP.dat                                         [ #00]
+
+Provided by Hal9000 <hal9000@denorastats.org> - 2006
 12/20 F Fixed Denora crashing on certain user quits/parts         [#363]
 12/19 A Added vhost support to Nefarious                          [#346]
 12/19 F Fixed many P10-related bugs, especially on Nefarious      [#348]
@@ -343,6 +348,8 @@ Provided by Hal9000 <hal9000@denorastats.org>
 03/24 U Updated example.de.conf                                   [ #00]
 03/24 U Updated it.l                                              [ #00]
 03/24 U Updated example.it.conf                                   [ #00]
+
+Provided by Hal9000 <hal9000@denorastats.org> - 2005
 12/13 U Updated mydbgen to add timeadded                          [ #00]
 04/08 F Fixed problem with mydbgen cause by previous patch        [#228]
 12/07 F Fixes to hourly cron events                               [ #00]
